tests/snapshots/06_pairs_and_recursion__church_pred_zero.snap
---
source: tests/golden.rs
expression: snapshot_content
input_file: tests/golden/06_pairs_and_recursion/church_pred_zero.lam
---
false

term
  nodes: 69
  depth: 18

eval
  steps:    13
  reduces:  13
  allocs:   45
  time:     [time]
