tests/snapshots/06_pairs_and_recursion__factorial.snap
---
source: tests/golden.rs
expression: snapshot_content
input_file: tests/golden/06_pairs_and_recursion/factorial.lam
---
6

term
  nodes: 98
  depth: 21

eval
  steps:    652
  reduces:  652
  allocs:   2772
  time:     [time]
