tests/snapshots/06_pairs_and_recursion__pair_first.snap
---
source: tests/golden.rs
expression: snapshot_content
input_file: tests/golden/06_pairs_and_recursion/pair_first.lam
---
a

term
  nodes: 25
  depth: 8

eval
  steps:    8
  reduces:  8
  allocs:   13
  time:     [time]
